--- a/.github/workflows/cnip.yml
+++ b/.github/workflows/cnip.yml
@@ -33,8 +33,7 @@ jobs:
         clang="$(curl -kLfsm 5 https://ispip.clang.cn/all_cn.txt)"
         iplist="$qqwry\n$ipipnet\n$clang"
         echo -e "${iplist}" | sort | uniq | sed -e 's/^/add address=/g'\
-        -e 's/$/ list=CNIP/g'|\
-        sed -e $'1i\\\n/ip firewall address-list'\
+        -e 's/$/ list=CNIP/g' | sed -e $'1i\\\n/ip firewall address-list'\
         -e $'1i\\\nremove [/ip firewall address-list find list=CNIP]'\
         -e $'1i\\\nadd address=10.0.0.0/8 list=CNIP comment=private-network'\
         -e $'1i\\\nadd address=172.16.0.0/12 list=CNIP comment=private-network'\
