--- a/.github/workflows/cnip.yml
+++ b/.github/workflows/cnip.yml
@@ -8,7 +8,7 @@ on:
   watch:
     types: started
   schedule:
-    - cron: 5,10,15,20,25,30,35,40,45,50,55, * * * *
+    - cron: 0/10 * * * *
 
 jobs:
   build:
