--- a/.github/workflows/cnip.yml
+++ b/.github/workflows/cnip.yml
@@ -21,11 +21,11 @@ jobs:
    #   with:
    #     fetch-depth: 0
 
-   # - name: Set git identity
-   #   run : |
-   #     git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-   #     git config --global user.name "github-actions[bot]"
-   #     sudo timedatectl set-timezone "Asia/Shanghai"
+    - name: Set git identity
+      run : |
+        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+        git config --global user.name "github-actions[bot]"
+        sudo timedatectl set-timezone "Asia/Shanghai"
     - name: Combine
       run: |
         qqwry="$(curl -kLfsm 5 https://raw.githubusercontent.com/metowolf/iplist/master/data/special/china.txt)"
