--- a/.github/workflows/cnip.yml
+++ b/.github/workflows/cnip.yml
@@ -2,13 +2,13 @@ name: China IP list
 
 on: 
   #workflow_dispatch
-  push: 
-     branches:
-       - master
-  # watch:
-  #  types: started
+  #push: 
+  #   branches:
+  #     - master
+  watch:
+    types: started
   schedule:
-  - cron: 0/10 * * * *
+    - cron: 0/10 * * * *
 
 jobs:
   build:
