--- a/.github/workflows/cnip.yml
+++ b/.github/workflows/cnip.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   build:
-    if: github.event.repository.owner.id == github.event.sender.id
+    if: github.event.repository.owner.id == github.event.sender.id || ! github.event.sender.id
     runs-on: Ubuntu-20.04
 
     steps:
