--- a/.github/workflows/cnip.yml
+++ b/.github/workflows/cnip.yml
@@ -8,7 +8,7 @@ on:
   watch:
     types: started
   schedule:
-    - cron: 1 1 * * *
+    - cron: * 5 * * *
 
 jobs:
   build:
@@ -29,8 +29,7 @@ jobs:
         
     - name: Combine
       run: |
-        clang="$(curl -kLfsm 5 https://ispip.clang.cn/all_cn.txt)"
-        echo -e "${clang}" | sort | uniq | sed -e 's/^/add address=/g' -e 's/$/ list=CNIP/g' | sed -e $'1i\\\n/ip firewall address-list' -e $'1i\\\nremove [/ip firewall address-list find list=CNIP]' list=CNIP'> cnip.rsc
+        echo -e "(curl -kLfsm 5 https://ispip.clang.cn/all_cn.txt)" | sort | uniq | sed -e 's/^/add address=/g' -e 's/$/ list=CNIP/g' | sed -e $'1i\\\n/ip firewall address-list' -e $'1i\\\nremove [/ip firewall address-list find list=CNIP]' list=CNIP'> cnip.rsc
 
     - name: Apply
       run: |
