--- a/.github/workflows/cnip.yml
+++ b/.github/workflows/cnip.yml
@@ -15,7 +15,7 @@ jobs:
      
     - name: Combine
       run: |
-        echo -e "(curl -kLfsm 5 https://ispip.clang.cn/all_cn.txt)" | sort | uniq | sed -e 's/^/add address=/g' -e 's/$/ list=CNIP/g' | sed -e $'1i\\\n/ip firewall address-list' -e $'1i\\\nremove [/ip firewall address-list find list=CNIP]' list=CNIP'> cnip.rsc
+        echo -e "(curl -kLfsm 5 https://ispip.clang.cn/all_cn.txt)" | sort | uniq | sed -e 's/^/add address=/g' -e 's/$/ list=CNIP/g' | sed -e $'1i\\\n/ip firewall address-list' -e $'1i\\\nremove [/ip firewall address-list find list=CNIP] list=CNIP'> cnip.rsc
 
     - name: Apply
       run: |
