--- a/.github/workflows/cnip.yml
+++ b/.github/workflows/cnip.yml
@@ -2,7 +2,7 @@ name: ROS CNIP list
 
 on:
   schedule:
-    - cron: "0 58 * * *"
+    - cron: "58 0 * * *"
   workflow_dispatch:
 
 jobs:
@@ -15,6 +15,7 @@ jobs:
      
     - name: Combine
       run: |
+        sudo timedatectl set-timezone "Asia/Shanghai"
         echo -e "(curl -kLfsm 5 https://ispip.clang.cn/all_cn.txt)" | sed -e 's/^/add address=/g' -e 's/$/ list=CNIP/g' | sed -e $'1i\\\n/ip firewall address-list' -e $'1i\\\nremove [/ip firewall address-list find list=CNIP] list=CNIP' > cnip.rsc
 
     - name: Apply
