--- a/.github/workflows/cnip.yml
+++ b/.github/workflows/cnip.yml
@@ -2,7 +2,7 @@ name: ROS CNIP list
 
 on:
   schedule:
-    - cron: "58 0 * * *"
+    - cron: "10 * * * *"
   workflow_dispatch:
 
 jobs:
@@ -17,10 +17,3 @@ jobs:
       run: |
         sudo timedatectl set-timezone "Asia/Shanghai"
         echo -e "(curl -kLfsm 5 https://ispip.clang.cn/all_cn.txt)" | sed -e 's/^/add address=/g' -e 's/$/ list=CNIP/g' | sed -e $'1i\\\n/ip firewall address-list' -e $'1i\\\nremove [/ip firewall address-list find list=CNIP] list=CNIP' > cnip.rsc
-
-    - name: Apply
-      run: |
-        Emoji=("🎉" "🤞" "✨" "🎁" "🎈" "🎄" "🎨" "💋" "🍓" "🍕" "🍉" "💐" "🌴" "🚀" "🛸" "🗽" "⛅" "🌈" "🔥" "⛄" "🐶" "🏅" "🦄" "🐤")
-        git add .
-        git commit -m "${Emoji[$[$RANDOM % ${#Emoji[@]}]]} Sync $(date +%Y-%m-%d" "%H:%M:%S)"
-        git push -f
